--- a/ubuntu/socks.service
+++ b/ubuntu/socks.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Python Proxy ShadowTunneling
+Description=Python Proxy ChapeeyTunneling
 Documentation=https://t.me/urtelegram
 After=network.target nss-lookup.target
 
@@ -9,7 +9,8 @@ User=root
 CapabilityBoundingSet=CAP_NET_ADMIN CAP_NET_BIND_SERVICE
 AmbientCapabilities=CAP_NET_ADMIN CAP_NET_BIND_SERVICE
 NoNewPrivileges=true
-ExecStart=/usr/bin/python -O /usr/bin/ws.py
+ExecStart=/usr/bin/python2 -O /usr/bin/ws.py
+
 Restart=on-failure
 
 [Install]
