--- a/ubuntu/ws.service
+++ b/ubuntu/ws.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=WebSocket
-Documentation=https://github.com/jaka1m
+Documentation=https://t.me/spid_3r
 After=syslog.target network-online.target
 
 [Service]
